# ytmp3-fast-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ytmp3-fast-converter.bat
src/: folder_uuid.py  globals.py  io_manager.py  known_paths.py  main.py  yt_dlp_manager.py
src/ytfc/: yt_dlp_manager.py
typings/yt_dlp/: YoutubeDL.pyi  __init__.pyi
